Projeto_Compilador/PL-24-25-main/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> header SEMICOLON global_part block DOT
Rule 2     header -> PROGRAM identifier
Rule 3     global_part -> sub_declaration_list
Rule 4     global_part -> empty
Rule 5     empty -> <empty>
Rule 6     sub_declaration_list -> sub_declaration SEMICOLON sub_declaration_list
Rule 7     sub_declaration_list -> sub_declaration SEMICOLON
Rule 8     variable_declaration_part -> VAR variable_declaration_list
Rule 9     variable_declaration_list -> variable_declaration variable_declaration_list
Rule 10    variable_declaration_list -> variable_declaration
Rule 11    variable_declaration -> identifier_list COLON type SEMICOLON
Rule 12    identifier_list -> identifier COMMA identifier_list
Rule 13    identifier_list -> identifier
Rule 14    identifier -> IDENTIFIER
Rule 15    sub_declaration -> procedure_declaration
Rule 16    sub_declaration -> function_declaration
Rule 17    procedure_declaration -> procedure_heading SEMICOLON block
Rule 18    procedure_heading -> PROCEDURE identifier
Rule 19    procedure_heading -> PROCEDURE identifier LPAREN RPAREN
Rule 20    procedure_heading -> PROCEDURE identifier LPAREN parameter_list RPAREN
Rule 21    function_declaration -> function_heading SEMICOLON block
Rule 22    function_heading -> FUNCTION type
Rule 23    function_heading -> FUNCTION identifier LPAREN RPAREN COLON type
Rule 24    function_heading -> FUNCTION identifier COLON type
Rule 25    function_heading -> FUNCTION identifier LPAREN parameter_list RPAREN COLON type
Rule 26    block -> optional_vardec statement_part
Rule 27    optional_vardec -> variable_declaration_part
Rule 28    optional_vardec -> empty
Rule 29    parameter_list -> parameter COMMA parameter_list
Rule 30    parameter_list -> parameter
Rule 31    parameter -> identifier COLON type
Rule 32    type -> TREAL
Rule 33    type -> TINTEGER
Rule 34    type -> TCHAR
Rule 35    type -> TSTRING
Rule 36    type -> TBOOLEAN
Rule 37    type -> TSTRING LBRACKET integer RBRACKET
Rule 38    type -> TARRAY LBRACKET integer DOTDOT integer RBRACKET OF type
Rule 39    statement_part -> BEGIN statement_sequence END
Rule 40    statement_sequence -> statement SEMICOLON statement_sequence
Rule 41    statement_sequence -> statement
Rule 42    statement -> assignment_statement
Rule 43    statement -> statement_part
Rule 44    statement -> if_statement
Rule 45    statement -> while_statement
Rule 46    statement -> repeat_statement
Rule 47    statement -> for_statement
Rule 48    statement -> procedure_or_function_call
Rule 49    statement -> empty
Rule 50    procedure_or_function_call -> identifier
Rule 51    procedure_or_function_call -> identifier LPAREN param_list RPAREN
Rule 52    param_list -> param_list COMMA param
Rule 53    param_list -> param
Rule 54    param -> expression
Rule 55    if_statement -> IF expression THEN statement ELSE statement
Rule 56    if_statement -> IF expression THEN statement
Rule 57    while_statement -> WHILE expression DO statement
Rule 58    repeat_statement -> REPEAT statement UNTIL expression
Rule 59    for_statement -> FOR assignment_statement TO expression DO statement
Rule 60    for_statement -> FOR assignment_statement DOWNTO expression DO statement
Rule 61    assignment_statement -> identifier ASSIGNMENT expression
Rule 62    expression -> expression and_or expression_m
Rule 63    expression -> expression_m
Rule 64    expression_m -> expression_s
Rule 65    expression_m -> expression_m sign expression_s
Rule 66    expression_s -> element
Rule 67    expression_s -> expression_s psign element
Rule 68    and_or -> AND
Rule 69    and_or -> OR
Rule 70    psign -> TIMES
Rule 71    psign -> DIVISION
Rule 72    sign -> PLUS
Rule 73    sign -> MINUS
Rule 74    sign -> DIV
Rule 75    sign -> MOD
Rule 76    sign -> EQ
Rule 77    sign -> NEQ
Rule 78    sign -> LT
Rule 79    sign -> LTE
Rule 80    sign -> GT
Rule 81    sign -> GTE
Rule 82    element -> identifier
Rule 83    element -> identifier LBRACKET expression RBRACKET
Rule 84    element -> real
Rule 85    element -> integer
Rule 86    element -> string
Rule 87    element -> char
Rule 88    element -> boolean
Rule 89    element -> LPAREN expression RPAREN
Rule 90    element -> NOT element
Rule 91    element -> function_call_inline
Rule 92    function_call_inline -> identifier LPAREN param_list RPAREN
Rule 93    function_call_inline -> identifier LPAREN RPAREN
Rule 94    real -> REAL
Rule 95    integer -> INTEGER
Rule 96    string -> STRING
Rule 97    char -> CHAR
Rule 98    boolean -> TRUE
Rule 99    boolean -> FALSE

Terminals, with rules where they appear

AND                  : 68
ASSIGNMENT           : 61
BEGIN                : 39
CHAR                 : 97
COLON                : 11 23 24 25 31
COMMA                : 12 29 52
DIV                  : 74
DIVISION             : 71
DO                   : 57 59 60
DOT                  : 1
DOTDOT               : 38
DOWNTO               : 60
ELSE                 : 55
END                  : 39
EQ                   : 76
FALSE                : 99
FOR                  : 59 60
FUNCTION             : 22 23 24 25
GT                   : 80
GTE                  : 81
IDENTIFIER           : 14
IF                   : 55 56
INTEGER              : 95
LBRACKET             : 37 38 83
LPAREN               : 19 20 23 25 51 89 92 93
LT                   : 78
LTE                  : 79
MINUS                : 73
MOD                  : 75
NEQ                  : 77
NOT                  : 90
OF                   : 38
OR                   : 69
PLUS                 : 72
PROCEDURE            : 18 19 20
PROGRAM              : 2
RBRACKET             : 37 38 83
REAL                 : 94
REPEAT               : 58
RPAREN               : 19 20 23 25 51 89 92 93
SEMICOLON            : 1 6 7 11 17 21 40
STRING               : 96
TARRAY               : 38
TBOOLEAN             : 36
TCHAR                : 34
THEN                 : 55 56
TIMES                : 70
TINTEGER             : 33
TO                   : 59
TREAL                : 32
TRUE                 : 98
TSTRING              : 35 37
UNTIL                : 58
VAR                  : 8
WHILE                : 57
error                : 

Nonterminals, with rules where they appear

and_or               : 62
assignment_statement : 42 59 60
block                : 1 17 21
boolean              : 88
char                 : 87
element              : 66 67 90
empty                : 4 28 49
expression           : 54 55 56 57 58 59 60 61 62 83 89
expression_m         : 62 63 65
expression_s         : 64 65 67
for_statement        : 47
function_call_inline : 91
function_declaration : 16
function_heading     : 21
global_part          : 1
header               : 1
identifier           : 2 12 13 18 19 20 23 24 25 31 50 51 61 82 83 92 93
identifier_list      : 11 12
if_statement         : 44
integer              : 37 38 38 85
optional_vardec      : 26
param                : 52 53
param_list           : 51 52 92
parameter            : 29 30
parameter_list       : 20 25 29
procedure_declaration : 15
procedure_heading    : 17
procedure_or_function_call : 48
program              : 0
psign                : 67
real                 : 84
repeat_statement     : 46
sign                 : 65
statement            : 40 41 55 55 56 57 58 59 60
statement_part       : 26 43
statement_sequence   : 39 40
string               : 86
sub_declaration      : 6 7
sub_declaration_list : 3 6
type                 : 11 22 23 24 25 31 38
variable_declaration : 9 10
variable_declaration_list : 8 9
variable_declaration_part : 27
while_statement      : 45

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . header SEMICOLON global_part block DOT
    (2) header -> . PROGRAM identifier

    PROGRAM         shift and go to state 3

    program                        shift and go to state 1
    header                         shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> header . SEMICOLON global_part block DOT

    SEMICOLON       shift and go to state 4


state 3

    (2) header -> PROGRAM . identifier
    (14) identifier -> . IDENTIFIER

    IDENTIFIER      shift and go to state 6

    identifier                     shift and go to state 5

state 4

    (1) program -> header SEMICOLON . global_part block DOT
    (3) global_part -> . sub_declaration_list
    (4) global_part -> . empty
    (6) sub_declaration_list -> . sub_declaration SEMICOLON sub_declaration_list
    (7) sub_declaration_list -> . sub_declaration SEMICOLON
    (5) empty -> .
    (15) sub_declaration -> . procedure_declaration
    (16) sub_declaration -> . function_declaration
    (17) procedure_declaration -> . procedure_heading SEMICOLON block
    (21) function_declaration -> . function_heading SEMICOLON block
    (18) procedure_heading -> . PROCEDURE identifier
    (19) procedure_heading -> . PROCEDURE identifier LPAREN RPAREN
    (20) procedure_heading -> . PROCEDURE identifier LPAREN parameter_list RPAREN
    (22) function_heading -> . FUNCTION type
    (23) function_heading -> . FUNCTION identifier LPAREN RPAREN COLON type
    (24) function_heading -> . FUNCTION identifier COLON type
    (25) function_heading -> . FUNCTION identifier LPAREN parameter_list RPAREN COLON type

    VAR             reduce using rule 5 (empty -> .)
    BEGIN           reduce using rule 5 (empty -> .)
    PROCEDURE       shift and go to state 15
    FUNCTION        shift and go to state 16

    global_part                    shift and go to state 7
    sub_declaration_list           shift and go to state 8
    empty                          shift and go to state 9
    sub_declaration                shift and go to state 10
    procedure_declaration          shift and go to state 11
    function_declaration           shift and go to state 12
    procedure_heading              shift and go to state 13
    function_heading               shift and go to state 14

state 5

    (2) header -> PROGRAM identifier .

    SEMICOLON       reduce using rule 2 (header -> PROGRAM identifier .)


state 6

    (14) identifier -> IDENTIFIER .

    SEMICOLON       reduce using rule 14 (identifier -> IDENTIFIER .)
    LPAREN          reduce using rule 14 (identifier -> IDENTIFIER .)
    COLON           reduce using rule 14 (identifier -> IDENTIFIER .)
    COMMA           reduce using rule 14 (identifier -> IDENTIFIER .)
    ASSIGNMENT      reduce using rule 14 (identifier -> IDENTIFIER .)
    END             reduce using rule 14 (identifier -> IDENTIFIER .)
    LBRACKET        reduce using rule 14 (identifier -> IDENTIFIER .)
    TIMES           reduce using rule 14 (identifier -> IDENTIFIER .)
    DIVISION        reduce using rule 14 (identifier -> IDENTIFIER .)
    PLUS            reduce using rule 14 (identifier -> IDENTIFIER .)
    MINUS           reduce using rule 14 (identifier -> IDENTIFIER .)
    DIV             reduce using rule 14 (identifier -> IDENTIFIER .)
    MOD             reduce using rule 14 (identifier -> IDENTIFIER .)
    EQ              reduce using rule 14 (identifier -> IDENTIFIER .)
    NEQ             reduce using rule 14 (identifier -> IDENTIFIER .)
    LT              reduce using rule 14 (identifier -> IDENTIFIER .)
    LTE             reduce using rule 14 (identifier -> IDENTIFIER .)
    GT              reduce using rule 14 (identifier -> IDENTIFIER .)
    GTE             reduce using rule 14 (identifier -> IDENTIFIER .)
    THEN            reduce using rule 14 (identifier -> IDENTIFIER .)
    AND             reduce using rule 14 (identifier -> IDENTIFIER .)
    OR              reduce using rule 14 (identifier -> IDENTIFIER .)
    DO              reduce using rule 14 (identifier -> IDENTIFIER .)
    UNTIL           reduce using rule 14 (identifier -> IDENTIFIER .)
    TO              reduce using rule 14 (identifier -> IDENTIFIER .)
    DOWNTO          reduce using rule 14 (identifier -> IDENTIFIER .)
    ELSE            reduce using rule 14 (identifier -> IDENTIFIER .)
    RPAREN          reduce using rule 14 (identifier -> IDENTIFIER .)
    RBRACKET        reduce using rule 14 (identifier -> IDENTIFIER .)


state 7

    (1) program -> header SEMICOLON global_part . block DOT
    (26) block -> . optional_vardec statement_part
    (27) optional_vardec -> . variable_declaration_part
    (28) optional_vardec -> . empty
    (8) variable_declaration_part -> . VAR variable_declaration_list
    (5) empty -> .

    VAR             shift and go to state 21
    BEGIN           reduce using rule 5 (empty -> .)

    block                          shift and go to state 17
    optional_vardec                shift and go to state 18
    variable_declaration_part      shift and go to state 19
    empty                          shift and go to state 20

state 8

    (3) global_part -> sub_declaration_list .

    VAR             reduce using rule 3 (global_part -> sub_declaration_list .)
    BEGIN           reduce using rule 3 (global_part -> sub_declaration_list .)


state 9

    (4) global_part -> empty .

    VAR             reduce using rule 4 (global_part -> empty .)
    BEGIN           reduce using rule 4 (global_part -> empty .)


state 10

    (6) sub_declaration_list -> sub_declaration . SEMICOLON sub_declaration_list
    (7) sub_declaration_list -> sub_declaration . SEMICOLON

    SEMICOLON       shift and go to state 22


state 11

    (15) sub_declaration -> procedure_declaration .

    SEMICOLON       reduce using rule 15 (sub_declaration -> procedure_declaration .)


state 12

    (16) sub_declaration -> function_declaration .

    SEMICOLON       reduce using rule 16 (sub_declaration -> function_declaration .)


state 13

    (17) procedure_declaration -> procedure_heading . SEMICOLON block

    SEMICOLON       shift and go to state 23


state 14

    (21) function_declaration -> function_heading . SEMICOLON block

    SEMICOLON       shift and go to state 24


state 15

    (18) procedure_heading -> PROCEDURE . identifier
    (19) procedure_heading -> PROCEDURE . identifier LPAREN RPAREN
    (20) procedure_heading -> PROCEDURE . identifier LPAREN parameter_list RPAREN
    (14) identifier -> . IDENTIFIER

    IDENTIFIER      shift and go to state 6

    identifier                     shift and go to state 25

state 16

    (22) function_heading -> FUNCTION . type
    (23) function_heading -> FUNCTION . identifier LPAREN RPAREN COLON type
    (24) function_heading -> FUNCTION . identifier COLON type
    (25) function_heading -> FUNCTION . identifier LPAREN parameter_list RPAREN COLON type
    (32) type -> . TREAL
    (33) type -> . TINTEGER
    (34) type -> . TCHAR
    (35) type -> . TSTRING
    (36) type -> . TBOOLEAN
    (37) type -> . TSTRING LBRACKET integer RBRACKET
    (38) type -> . TARRAY LBRACKET integer DOTDOT integer RBRACKET OF type
    (14) identifier -> . IDENTIFIER

    TREAL           shift and go to state 28
    TINTEGER        shift and go to state 29
    TCHAR           shift and go to state 30
    TSTRING         shift and go to state 31
    TBOOLEAN        shift and go to state 32
    TARRAY          shift and go to state 33
    IDENTIFIER      shift and go to state 6

    type                           shift and go to state 26
    identifier                     shift and go to state 27

state 17

    (1) program -> header SEMICOLON global_part block . DOT

    DOT             shift and go to state 34


state 18

    (26) block -> optional_vardec . statement_part
    (39) statement_part -> . BEGIN statement_sequence END

    BEGIN           shift and go to state 36

    statement_part                 shift and go to state 35

state 19

    (27) optional_vardec -> variable_declaration_part .

    BEGIN           reduce using rule 27 (optional_vardec -> variable_declaration_part .)


state 20

    (28) optional_vardec -> empty .

    BEGIN           reduce using rule 28 (optional_vardec -> empty .)


state 21

    (8) variable_declaration_part -> VAR . variable_declaration_list
    (9) variable_declaration_list -> . variable_declaration variable_declaration_list
    (10) variable_declaration_list -> . variable_declaration
    (11) variable_declaration -> . identifier_list COLON type SEMICOLON
    (12) identifier_list -> . identifier COMMA identifier_list
    (13) identifier_list -> . identifier
    (14) identifier -> . IDENTIFIER

    IDENTIFIER      shift and go to state 6

    variable_declaration_list      shift and go to state 37
    variable_declaration           shift and go to state 38
    identifier_list                shift and go to state 39
    identifier                     shift and go to state 40

state 22

    (6) sub_declaration_list -> sub_declaration SEMICOLON . sub_declaration_list
    (7) sub_declaration_list -> sub_declaration SEMICOLON .
    (6) sub_declaration_list -> . sub_declaration SEMICOLON sub_declaration_list
    (7) sub_declaration_list -> . sub_declaration SEMICOLON
    (15) sub_declaration -> . procedure_declaration
    (16) sub_declaration -> . function_declaration
    (17) procedure_declaration -> . procedure_heading SEMICOLON block
    (21) function_declaration -> . function_heading SEMICOLON block
    (18) procedure_heading -> . PROCEDURE identifier
    (19) procedure_heading -> . PROCEDURE identifier LPAREN RPAREN
    (20) procedure_heading -> . PROCEDURE identifier LPAREN parameter_list RPAREN
    (22) function_heading -> . FUNCTION type
    (23) function_heading -> . FUNCTION identifier LPAREN RPAREN COLON type
    (24) function_heading -> . FUNCTION identifier COLON type
    (25) function_heading -> . FUNCTION identifier LPAREN parameter_list RPAREN COLON type

    VAR             reduce using rule 7 (sub_declaration_list -> sub_declaration SEMICOLON .)
    BEGIN           reduce using rule 7 (sub_declaration_list -> sub_declaration SEMICOLON .)
    PROCEDURE       shift and go to state 15
    FUNCTION        shift and go to state 16

    sub_declaration                shift and go to state 10
    sub_declaration_list           shift and go to state 41
    procedure_declaration          shift and go to state 11
    function_declaration           shift and go to state 12
    procedure_heading              shift and go to state 13
    function_heading               shift and go to state 14

state 23

    (17) procedure_declaration -> procedure_heading SEMICOLON . block
    (26) block -> . optional_vardec statement_part
    (27) optional_vardec -> . variable_declaration_part
    (28) optional_vardec -> . empty
    (8) variable_declaration_part -> . VAR variable_declaration_list
    (5) empty -> .

    VAR             shift and go to state 21
    BEGIN           reduce using rule 5 (empty -> .)

    block                          shift and go to state 42
    optional_vardec                shift and go to state 18
    variable_declaration_part      shift and go to state 19
    empty                          shift and go to state 20

state 24

    (21) function_declaration -> function_heading SEMICOLON . block
    (26) block -> . optional_vardec statement_part
    (27) optional_vardec -> . variable_declaration_part
    (28) optional_vardec -> . empty
    (8) variable_declaration_part -> . VAR variable_declaration_list
    (5) empty -> .

    VAR             shift and go to state 21
    BEGIN           reduce using rule 5 (empty -> .)

    block                          shift and go to state 43
    optional_vardec                shift and go to state 18
    variable_declaration_part      shift and go to state 19
    empty                          shift and go to state 20

state 25

    (18) procedure_heading -> PROCEDURE identifier .
    (19) procedure_heading -> PROCEDURE identifier . LPAREN RPAREN
    (20) procedure_heading -> PROCEDURE identifier . LPAREN parameter_list RPAREN

    SEMICOLON       reduce using rule 18 (procedure_heading -> PROCEDURE identifier .)
    LPAREN          shift and go to state 44


state 26

    (22) function_heading -> FUNCTION type .

    SEMICOLON       reduce using rule 22 (function_heading -> FUNCTION type .)


state 27

    (23) function_heading -> FUNCTION identifier . LPAREN RPAREN COLON type
    (24) function_heading -> FUNCTION identifier . COLON type
    (25) function_heading -> FUNCTION identifier . LPAREN parameter_list RPAREN COLON type

    LPAREN          shift and go to state 45
    COLON           shift and go to state 46


state 28

    (32) type -> TREAL .

    SEMICOLON       reduce using rule 32 (type -> TREAL .)
    COMMA           reduce using rule 32 (type -> TREAL .)
    RPAREN          reduce using rule 32 (type -> TREAL .)


state 29

    (33) type -> TINTEGER .

    SEMICOLON       reduce using rule 33 (type -> TINTEGER .)
    COMMA           reduce using rule 33 (type -> TINTEGER .)
    RPAREN          reduce using rule 33 (type -> TINTEGER .)


state 30

    (34) type -> TCHAR .

    SEMICOLON       reduce using rule 34 (type -> TCHAR .)
    COMMA           reduce using rule 34 (type -> TCHAR .)
    RPAREN          reduce using rule 34 (type -> TCHAR .)


state 31

    (35) type -> TSTRING .
    (37) type -> TSTRING . LBRACKET integer RBRACKET

    SEMICOLON       reduce using rule 35 (type -> TSTRING .)
    COMMA           reduce using rule 35 (type -> TSTRING .)
    RPAREN          reduce using rule 35 (type -> TSTRING .)
    LBRACKET        shift and go to state 47


state 32

    (36) type -> TBOOLEAN .

    SEMICOLON       reduce using rule 36 (type -> TBOOLEAN .)
    COMMA           reduce using rule 36 (type -> TBOOLEAN .)
    RPAREN          reduce using rule 36 (type -> TBOOLEAN .)


state 33

    (38) type -> TARRAY . LBRACKET integer DOTDOT integer RBRACKET OF type

    LBRACKET        shift and go to state 48


state 34

    (1) program -> header SEMICOLON global_part block DOT .

    $end            reduce using rule 1 (program -> header SEMICOLON global_part block DOT .)


state 35

    (26) block -> optional_vardec statement_part .

    DOT             reduce using rule 26 (block -> optional_vardec statement_part .)
    SEMICOLON       reduce using rule 26 (block -> optional_vardec statement_part .)


state 36

    (39) statement_part -> BEGIN . statement_sequence END
    (40) statement_sequence -> . statement SEMICOLON statement_sequence
    (41) statement_sequence -> . statement
    (42) statement -> . assignment_statement
    (43) statement -> . statement_part
    (44) statement -> . if_statement
    (45) statement -> . while_statement
    (46) statement -> . repeat_statement
    (47) statement -> . for_statement
    (48) statement -> . procedure_or_function_call
    (49) statement -> . empty
    (61) assignment_statement -> . identifier ASSIGNMENT expression
    (39) statement_part -> . BEGIN statement_sequence END
    (55) if_statement -> . IF expression THEN statement ELSE statement
    (56) if_statement -> . IF expression THEN statement
    (57) while_statement -> . WHILE expression DO statement
    (58) repeat_statement -> . REPEAT statement UNTIL expression
    (59) for_statement -> . FOR assignment_statement TO expression DO statement
    (60) for_statement -> . FOR assignment_statement DOWNTO expression DO statement
    (50) procedure_or_function_call -> . identifier
    (51) procedure_or_function_call -> . identifier LPAREN param_list RPAREN
    (5) empty -> .
    (14) identifier -> . IDENTIFIER

    BEGIN           shift and go to state 36
    IF              shift and go to state 60
    WHILE           shift and go to state 61
    REPEAT          shift and go to state 62
    FOR             shift and go to state 63
    SEMICOLON       reduce using rule 5 (empty -> .)
    END             reduce using rule 5 (empty -> .)
    IDENTIFIER      shift and go to state 6

    statement_sequence             shift and go to state 49
    statement                      shift and go to state 50
    assignment_statement           shift and go to state 51
    statement_part                 shift and go to state 52
    if_statement                   shift and go to state 53
    while_statement                shift and go to state 54
    repeat_statement               shift and go to state 55
    for_statement                  shift and go to state 56
    procedure_or_function_call     shift and go to state 57
    empty                          shift and go to state 58
    identifier                     shift and go to state 59

state 37

    (8) variable_declaration_part -> VAR variable_declaration_list .

    BEGIN           reduce using rule 8 (variable_declaration_part -> VAR variable_declaration_list .)


state 38

    (9) variable_declaration_list -> variable_declaration . variable_declaration_list
    (10) variable_declaration_list -> variable_declaration .
    (9) variable_declaration_list -> . variable_declaration variable_declaration_list
    (10) variable_declaration_list -> . variable_declaration
    (11) variable_declaration -> . identifier_list COLON type SEMICOLON
    (12) identifier_list -> . identifier COMMA identifier_list
    (13) identifier_list -> . identifier
    (14) identifier -> . IDENTIFIER

    BEGIN           reduce using rule 10 (variable_declaration_list -> variable_declaration .)
    IDENTIFIER      shift and go to state 6

    variable_declaration           shift and go to state 38
    variable_declaration_list      shift and go to state 64
    identifier_list                shift and go to state 39
    identifier                     shift and go to state 40

state 39

    (11) variable_declaration -> identifier_list . COLON type SEMICOLON

    COLON           shift and go to state 65


state 40

    (12) identifier_list -> identifier . COMMA identifier_list
    (13) identifier_list -> identifier .

    COMMA           shift and go to state 66
    COLON           reduce using rule 13 (identifier_list -> identifier .)


state 41

    (6) sub_declaration_list -> sub_declaration SEMICOLON sub_declaration_list .

    VAR             reduce using rule 6 (sub_declaration_list -> sub_declaration SEMICOLON sub_declaration_list .)
    BEGIN           reduce using rule 6 (sub_declaration_list -> sub_declaration SEMICOLON sub_declaration_list .)


state 42
